improved save camera, added zoom-to-fit

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,24 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "07ab066b-23ee-49c2-82df-324adc471e0f",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 1,
+   "id": "d6cfe112-db24-430c-ba7c-bb31bd9946d5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "let jscad = require(\"@jscad/modeling\")\n",
     "\n",
     "let { booleans, colors, primitives } = jscad // modeling comes from the included MODELING library\n",
-    "let { intersect, subtract } = booleans\n",
-    "let { colorize } = colors\n",
-    "let { cube, cuboid, line, sphere, star } = primitives"
+    "let b = booleans\n",
+    "let c = colors\n",
+    "let p = primitives\n",
+    "\n",
+    "function jscad_show(geom, useLastCamera, saveCamera) {\n",
+    "    return $$.mime({\n",
+    "        \"application/jscad-geom\": {\n",
+    "            geom,\n",
+    "            useLastCamera,\n",
+    "            saveCamera,\n",
+    "            // minHeight: 300,\n",
+    "            // height: 300\n",
+    "        }\n",
+    "    })\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "b97caddd-9505-4a65-8da9-8bb11f4c2b42",
    "metadata": {
     "tags": []
@@ -19706,31 +19716,30 @@
           1
          ]
         }
-       ],
-       "preserveCamera": true
+       ]
       }
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logo_demo = (parameters) => {\n",
+    "demo = (parameters) => {\n",
     "  const logo = [\n",
-    "    colorize([1.0, 0.4, 1.0], subtract(\n",
-    "      cube({ size: 300 }),\n",
-    "      sphere({ radius: 200 })\n",
+    "    c.colorize([1.0, 0.4, 1.0], b.subtract(\n",
+    "      p.cube({ size: 300 }),\n",
+    "      p.sphere({ radius: 200 })\n",
     "    )),\n",
-    "    colorize([1.0, 1.0, 0], intersect(\n",
-    "      sphere({ radius: 130 }),\n",
-    "      cube({ size: 210 })\n",
+    "    c.colorize([1.0, 1.0, 0], b.intersect(\n",
+    "      p.sphere({ radius: 130 }),\n",
+    "      p.cube({ size: 210 })\n",
     "    ))\n",
     "  ]\n",
     "\n",
-    "  const transpCube = colorize([1, 0, 0, 0.75], cuboid({ size: [100 * parameters.scale, 100, 210 + (200 * parameters.scale)] }))\n",
-    "  const star2D = star({ vertices: 8, innerRadius: 300, outerRadius: 400 })\n",
-    "  const line2D = colorize([1.0, 0, 0], line([[260, 260], [-260, 260], [-260, -260], [260, -260], [260, 260]]))\n",
+    "  const transpCube = c.colorize([1, 0, 0, 0.75], p.cuboid({ size: [100 * parameters.scale, 100, 210 + (200 * parameters.scale)] }))\n",
+    "  const star2D = p.star({ vertices: 8, innerRadius: 300, outerRadius: 400 })\n",
+    "  const line2D = c.colorize([1.0, 0, 0], p.line([[260, 260], [-260, 260], [-260, -260], [260, -260], [260, 260]]))\n",
     "  // some colors are intentionally without alpfa channel to test geom2ToGeometries will add alpha channel\n",
     "  const colorChange = [\n",
     "    [1, 0, 0, 1],\n",
@@ -19746,13 +19755,7 @@
     "  return [transpCube, star2D, line2D, ...logo]\n",
     "}\n",
     "\n",
-    "$$.mime({\n",
-    "    \"application/jscad-geom\": {\n",
-    "        geom: logo_demo({scale: 1}),\n",
-    "        preserveCamera: true,\n",
-    "        //minHeight: 300\n",
-    "    }\n",
-    "});"
+    "jscad_show(demo({scale: 1}))"
    ]
   }
  ],
